@@ -1883,12 +1883,11 @@ Example:
 Monit can test a filesystem or disk for space usage. This test may only
 be used in the context of a filesystem service type.
 
-Filesystems usually have some space reserved for the root user. Tools like
-C<df> usually does not report this reserved space. When C<df> reports 96% used,
-the disk might actually be full for regular users since they cannot write to
-the file-system. Monit space usage test B<includes> reserved space to take this
-situation into account. The effect is that Monit can report higher usage than
-C<df> does.
+Filesystems usually have some space reserved for the root user (ca. 1-5%),
+so non-superusers cannot write to a nearly full filesystem. If you set a
+limit for the filesystem which is used by non-root users you should reflect
+the reserved blocks (Monit reports the reserved blocks percent in the CLI
+status and HTTP interface for the given filesystem).
 
 Syntax:
 
